added Tag IndexAndDetail

--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -9,6 +9,8 @@
 @using BackendProject.Areas.Admin.ViewModels.About
 @using BackendProject.Areas.Admin.ViewModels.Review
 @using BackendProject.Areas.Admin.ViewModels.Customer
+@using BackendProject.Areas.Admin.ViewModels.Tag
+
 
 
 
