--- a/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -431,12 +431,14 @@
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
                             <i class="menu-icon mdi mdi-table"></i>
-                            <span class="menu-title">Tables</span>
+                            <span class="menu-title">BlogPage</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="tables">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="tag" asp-action="Index">Tags</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Contact" asp-action="InfoIndex">Basic table</a></li>
+
                             </ul>
                         </div>
                     </li>
