--- a/BackendProject/Areas/Admin/Views/Tag/Detail.cshtml
+++ b/BackendProject/Areas/Admin/Views/Tag/Detail.cshtml
@@ -5,12 +5,11 @@
 
 <div class="container mt-5 " style="margin-left:30px">
 
+   
 
-
-
-        <h3>@Model.Name</h3>
-
-    <h3>@Model.CreatedDate</h3>
+        <h3 class="mb-3">@Model.Name</h3>
+  
+        <p>@Model.CreatedDate</p>
 
 
     <div class="back mt-2">
