added category crud

--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -10,6 +10,12 @@
 @using BackendProject.Areas.Admin.ViewModels.Review
 @using BackendProject.Areas.Admin.ViewModels.Customer
 @using BackendProject.Areas.Admin.ViewModels.Tag
+@using BackendProject.Areas.Admin.ViewModels.Category
+@using BackendProject.Areas.Admin.ViewModels.Product
+@using BackendProject.Helpers
+
+
+
 
 
 
