added blog index detail and create

--- a/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -437,7 +437,7 @@
                         <div class="collapse" id="tables">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="tag" asp-action="Index">Tags</a></li>
-                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Contact" asp-action="InfoIndex">Basic table</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Blog" asp-action="Index">Blog</a></li>
 
                             </ul>
                         </div>
