--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -12,6 +12,7 @@
 @using BackendProject.Areas.Admin.ViewModels.Tag
 @using BackendProject.Areas.Admin.ViewModels.Category
 @using BackendProject.Areas.Admin.ViewModels.Product
+@using BackendProject.Areas.Admin.ViewModels.Blog
 @using BackendProject.Helpers
 
 
