--- a/BackendProject/Areas/Admin/Views/Blog/Index.cshtml
+++ b/BackendProject/Areas/Admin/Views/Blog/Index.cshtml
@@ -20,6 +20,11 @@
                     <th>
                         Description
                     </th>
+
+                    <th>
+                        Tags
+                    </th>
+
                     <th>
                         Created Date
                     </th>
@@ -47,6 +52,18 @@
                         <td>
                             @blog.Description.Substring(0, (int)Math.Ceiling(blog.Description.Length * 0.1))
                         </td>
+                        <td>
+                            @if (blog.Tags.Count()!=0)
+                            {
+                                @(blog.Tags[0].Name + "  and others")
+
+                                }
+else
+{
+    @("no tag")
+}
+                        </td>
+
                         <td>
                             @blog.CreatedDate.ToString("MM/dd/yyyy")
                         </td>
