--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,7 +13,8 @@
 @using BackendProject.Areas.Admin.ViewModels.Category
 @using BackendProject.Areas.Admin.ViewModels.Product
 @using BackendProject.Areas.Admin.ViewModels.Blog
-
+@using BackendProject.Areas.Admin.ViewModels.Setting
+@using BackendProject.Models
 @using BackendProject.Helpers
 
 
