added account login register

--- a/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -456,6 +456,19 @@
                             </ul>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-bs-toggle="collapse" href="#iconss" aria-expanded="false" aria-controls="iconss">
+                            <i class="menu-icon mdi mdi-layers-outline"></i>
+                            <span class="menu-title">Account</span>
+                            <i class="menu-arrow"></i>
+                        </a>
+                        <div class="collapse" id="iconss">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Account" asp-action="Index">Users</a></li>
+
+                            </ul>
+                        </div>
+                    </li>
                     <li class="nav-item nav-category">pages</li>
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
