--- a/BackendProject/Views/_ViewImports.cshtml
+++ b/BackendProject/Views/_ViewImports.cshtml
@@ -8,7 +8,7 @@
 @using BackendProject.Areas.Admin.ViewModels.Layout
 @using BackendProject.Areas.Admin.ViewModels.Blog
 @using BackendProject.Areas.Admin.ViewModels.Social
-
+@using BackendProject.ViewModels.Account
 
 
 
