--- a/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BackendProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -14,6 +14,7 @@
 @using BackendProject.Areas.Admin.ViewModels.Product
 @using BackendProject.Areas.Admin.ViewModels.Blog
 @using BackendProject.Areas.Admin.ViewModels.Setting
+@using BackendProject.Areas.Admin.ViewModels.Account
 @using BackendProject.Models
 @using BackendProject.Helpers
 
