--- a/BackendProject/Views/Shared/_ProductsPartial.cshtml
+++ b/BackendProject/Views/Shared/_ProductsPartial.cshtml
@@ -4,14 +4,14 @@
 {
     <div class="col-lg-4 col-md-6 col-12 mb-60">
 
-        <div class="product">
+        <div class="product" data-id="@item.Id">
 
             <!-- Image Wrapper -->
             <div class="image">
                 <!-- Image -->
                 <a href="product-details.html" class="img"><img src="~/img/product/@item.Image" alt="Product"></a>
                 <!-- Wishlist -->
-                <a href="#" class="wishlist"><i class="fa fa-heart-o"></i></a>
+                <a href="#" class="wishlist wishlist-add"><i class="fa fa-heart-o"></i></a>
                 <!-- Label -->
                 <span class="label">New</span>
             </div>
