--- a/BackendProject/Views/_ViewImports.cshtml
+++ b/BackendProject/Views/_ViewImports.cshtml
@@ -9,6 +9,12 @@
 @using BackendProject.Areas.Admin.ViewModels.Blog
 @using BackendProject.Areas.Admin.ViewModels.Social
 @using BackendProject.ViewModels.Account
+@using BackendProject.ViewModels.Wishlist
+@using Microsoft.AspNetCore.Identity;
+@using BackendProject.Models
+
+
+
 
 
 
