--- a/BackendProject/Views/Shared/_Layout.cshtml
+++ b/BackendProject/Views/Shared/_Layout.cshtml
@@ -1,9 +1,11 @@
 ﻿@inject ILayoutService _layoutService;
+@inject UserManager<AppUser> userManager;
+
 
 
 @{
 
-    HeaderVM headerDatas =await _layoutService.GetHeaderDatas();
+    HeaderVM headerDatas = await _layoutService.GetHeaderDatas();
     FooterVM footerDatas = _layoutService.GetFooterDatas();
     List<SocialVM> socialDatas = await _layoutService.GetSocialDatas();
 }
@@ -76,8 +78,8 @@
                                     <div class="account-menu col-md-4 col-12">
                                         <ul>
                                             <li><a href="#">My Account</a></li>
-                                         
-                                            <li><a href="wishlist.html">Wishlist</a></li>
+
+                                            <li><a asp-controller="Wishlist" asp-action="Index">Wishlist(<span class="wishlist-count"></span>)</a></li>
                                             <li>
                                                 <a href="#" data-toggle="dropdown"><i class="fa fa-shopping-cart"></i><span class="num">2</span></a>
 
@@ -177,7 +179,7 @@
                                             <a class="nav-link" href="#">@headerDatas.UserFullName</a>
                                             <ul class="sub-menu">
                                                 <li>
-                                                    <form method="post" asp-controller="Account" asp-action="Logout">
+                                                    <form method="post" asp-controller="Account" asp-action="Logout" asp-route-userId="@userManager.Users.Where(u=>u.UserName==User.Identity.Name).FirstOrDefault().Id">
                                                         <button style="background:transparent; border:none;" type="submit">Logout</button>
                                                     </form>
                                                 </li>
